restructred the day grid. Fixed alignment issues when top item is a "no event"

--- a/blocks/core/ff_module/ff_module-planner-grid-day/ff_module-planner-grid-day.less
+++ b/blocks/core/ff_module/ff_module-planner-grid-day/ff_module-planner-grid-day.less
@@ -84,7 +84,8 @@
         }
         .sm--empty {
             background-color: @base-bg;
-            border-left: 10px solid @base-bg;
+            border-left: 10px solid transparent;
+            border-right: none; //AFTER bett, find out why this doesn't work.
         }
         .sm--event {}
         .md {
@@ -234,8 +235,16 @@
             #ff_mix-planner-grid > .header > .lg();
             #ff_mix-planner-grid-day > .header > .lg();
         }
-        &__item--event {
+        &__item--event,
+        &__item--empty {
             #ff_mix-planner-grid > .item > .lg--event();
         }
     }
+}
+
+// --------------------------------- //
+// Fix this horrible thing after bett
+// --------------------------------- //
+.ff_module-planner-grid-day__item.ff_module-planner-grid-day__item--empty {
+    border-right: none;
 }
